Made the projects section swap to vertical display on smaller screens to avoid breaking the website

--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -127,3 +127,16 @@
         }
     }
 }
+
+@include media-breakpoint-down(md) {
+    .section--features {
+		.ant-space {
+			display: block;
+			
+			.ant-space-item {
+				padding-top: 2.25rem;
+				padding-bottom: 1.75rem;
+			}
+		}
+	}
+}
